Bug 134605 - FILESAVE: DOCX: Footer shrinks after RT
Summary: FILESAVE: DOCX: Footer shrinks after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.2.0 target:7.1.1 target:7.0.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Header-Footer
  Show dependency treegraph
 
Reported: 2020-07-07 10:44 UTC by Xisco Faulí
Modified: 2021-01-27 14:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.1 master after RT (69.57 KB, image/png)
2020-07-07 10:44 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-07-07 10:44:29 UTC
Created attachment 162749 [details]
Comparison MSO 2010 and LibreOffice 7.1 master after RT

Steps to reproduce:
1. Open attachment 80513 [details] from bug 35324
2. Save it as DOCX
3. Open the new created document

-> The footer has shrunk and there is no space between the image and the edge of the page is gone. See comparison image

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 9af38b4504ccda57a0c32eb8bdd03e5a8ca29ddc
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-07-07 10:46:23 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=51534ac2b9747975945acb6a1e1ba5cc6d73f5c2

author	Miklos Vajna <vmiklos@collabora.com>	2020-05-11 21:08:35 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2020-05-12 09:02:43 +0200
commit 51534ac2b9747975945acb6a1e1ba5cc6d73f5c2 (patch)
tree b39fb0577bac479321027ae08640c11f3d2d0bc2
parent 23d9966751566028c50ca95ca203d20f36c64f30 (diff)
tdf#127778 DOCX import: fix unexpected heading on non-first page ...

Bisected with: bibisect-linux64-7.0

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2021-01-26 08:04:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/80b360085f5974fbb3abe49a88b20f4d39704fb5

tdf#134605 DOCX export: fix unexpected loss of footer margin

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2021-01-26 09:37:53 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/b708f31bf5f2993bf3f9fb2a832267f02bf90eac

tdf#134605 DOCX export: fix unexpected loss of footer margin

It will be available in 7.1.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2021-01-27 14:17:40 UTC
Verified in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: f2389a70da606768a39ee599de6a5b24058734aa
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 5 Commit Notification 2021-01-27 14:19:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/77bc50ae97e2447ec997d32a91c93c5fa44a6fb3

tdf#134605 DOCX export: fix unexpected loss of footer margin

It will be available in 7.0.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.