tdf#134605 DOCX export: fix unexpected loss of footer margin

Regression from commit 51534ac2b9747975945acb6a1e1ba5cc6d73f5c2
(tdf#127778 DOCX import: fix unexpected heading on non-first page ...,
2020-05-11), which replaced an import fix with an export fix.

What was missed there is the import fix handled both headers and
footers, while the export fix only handled headers.

Fix the problem by doing the same mapping for footers: if a follow page
style has no footer, but the first page style has, then take the margin
from that one. The import side did the opposite of this already.

Change-Id: Ibb191db4136bce0ad5e4bf14dcea15f5955bd298
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/109927
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>